@startuml
'https://plantuml.com/class-diagram

package commands {
    interface ICmd {
        + shellExecute(): void
        + shellhowHelp(): void
    }
    ' pour éviter de se répéter dans les commandes on place
    ' le contexte ici
    abstract class Cmd {
        - iCmdCtx: ICmdCtx
        - {static} prompt: String
        --
        + Cmd(ICmdCtx iCmdCtx)
        --
        + cliWln(String msg): void
        + cliW(String msg): void
        --
        + getCLIPrompt(): String
        + getICmdDelegate(): ICmdShellDelegate
        + setUserPrompt(String prompt): void
    }
    package specialized {
        class CmdCreate {}
        class CmdHelp {}
        class CmdHint {}
        class CmdLoad {}
    }
    ' interface contextuelle pour les commandes
    ' permet de ne plus modifier les contructeurs des commandes
    ' si on rajoute des delegate (pour plus tard le network et la partie GUI)
    interface ICmdCtx {
        + getICmdShellDelegate(): ICmdShellDelegate
        + getINETDelegate(): INETDelegate
        + getGUIDelegate(): IGUIDelegate
    }
    class CmdCtx {
          - iCmdShellDelegate: ICmdShellDelegate
          - inetDelegate: INETDelegate
          - guiDelegate: IGUIDelegate
          --
          + CmdCtx(iCmdShellDelegate,INETDelegate,IGUIDelegate)

    }



    CmdCreate --|> Cmd
    CmdHelp --|> Cmd
    CmdHint --|> Cmd
    CmdLoad --|> Cmd

}
package ui{
    package cli {
        interface ICmdShellDelegate {
            + cliWln(): void
            + cliW(): void
            + cliGetPrompt(): String
            + cliSetPromptHeader(): void
            + cliIsRunning(): boolean
            + cliCommandHistory(): void
            <color:#AE3400>// will be removed</color>
            + cliSetRunning(running: boolean): void

        }
        class CmdShellDelegate implements ICmdShellDelegate{
            - isRunning: AtomicBoolean

        }
    }
}

ICmdShellDelegate <|-- ICmdCtx
Cmd *-- CmdCtx
' CmdCtx implements ICmdCtx
CmdCtx ..|> ICmdCtx
Cmd ..|> ICmd
CmdCtx *- CmdShellDelegate

note top of specialized
  <color:#AE3400>11 commands</color>
end note



@enduml